css/style.css
body {
    text-align: center;
}

html, body {
	height: 100%;
	margin: 0;
}

canvas {
	max-width: 505px;
	max-height: 606px;
}

@media screen and (orientation: landscape) and (max-height: 606px) {
	canvas {
		height: 100%;
		width: 90%;
	}
}

@media screen and (orientation: portrait) and (max-width: 505px) {
	canvas {
		width: 100%;
		height: 90%;
	}
}

#start-screen {
	position: absolute;
	background-color: red;
	width: 100%;
	height: 102%;
	left: 0;
	top: 0;
	font-family: monospace;
	z-index: 1;
}

.container {
	height: 102%;
	max-width: 500px;
	margin: 0 auto;
}

.heading,
.instructions,
.start,
.note {
	height: 25%;
	display: -webkit-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-orient: vertical;
	-moz-box-orient: vertical;
	-webkit-box-direction: normal;
	-moz-box-direction: normal;
	-webkit-flex-direction: column;
	-ms-flex-direction: column;
	flex-direction: column;
	-webkit-justify-content: center;
    justify-content: center;
}

.heading {
	font-size: 2em;
}

.name {
	margin: 0;
	color: white;
}

.sub-title {
	margin: 0;
	font-size: 20px;
}

.instructions {
	margin: 0;
	text-align: left;
	font-size: 16px;
	margin-left: 5%;
	margin-right: 5%;
}

#start-button {
	font-size: 2em;
	font-weight: bold;
	background-color: gray;
	color: white;
	width: 100px;
	margin: 0 auto;
}

.note {
	text-align: left;
	margin-left: 5%;
	margin-right: 5%;
}

.controls {
	font-size: 4em;
	position: relative;
	bottom: 175px;
	color: white;
	opacity: 0.5;

}

.controls-row {
	margin-top: -30px;
}

.left {
	margin-right: 20px;
}

.right {
	margin-left: 20px;
}

